<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.links.LinksFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#0E6FFF">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="16dp">

                    <TextView
                        android:id="@+id/dashboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="-5sp"
                        android:text="@string/dashboard"
                        android:textAppearance="@style/dashboard"
                        android:textSize="24dp" />

                    <ImageView
                        android:id="@+id/ivSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_dashboard_button" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/navbar"
                android:layout_marginTop="-25dp"
                android:background="@drawable/bg_rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">

                        <TextView
                            android:id="@+id/good_mornin"
                            style="@style/good_mornin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="5sp"
                            android:text="Good morning" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="127dp"
                                android:layout_height="32dp"
                                android:gravity="center_vertical"
                                android:lineSpacingExtra="3sp"
                                android:text="User Name"
                                android:textAppearance="@style/user_name" />

                            <View
                                android:id="@+id/image_296"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginStart="8dp"
                                android:background="@drawable/ic_hello" />

                        </LinearLayout>

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/overall_url_chart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="horizontal"
                            tools:itemCount="3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/button_view_analytics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_view_analytics"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:drawableLeft="@drawable/ic_arrows"
                                android:text="@string/view_analytics"
                                android:textAllCaps="false"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <Button
                                android:id="@+id/button_top_links"
                                style="@style/SelectedLinkButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_links"
                                android:text="Top Links" />


                            <Button
                                android:id="@+id/button_recent_links"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="Recent Links"
                                android:textColor="#999CA0" />
                        </RadioGroup>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_search_drawable"
                            android:src="@drawable/ic_search"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_links"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="20dp"
                        tools:itemCount="4" />


                    <LinearLayout
                        android:id="@+id/button_view_all_links"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_view_analytics"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:drawableLeft="@drawable/ic_bottom_nav_link"
                            android:text="@string/view_all_links"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="44dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_talk_with_us"
                            style="@style/style_talk_with_u"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_whatsapp"
                            android:gravity="start|center_vertical"
                            android:text="@string/talk_with_us"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/button_frequently_asked_questions"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/bg_talk_with_us"
                            android:drawableLeft="@drawable/ic_faq"
                            android:gravity="start|center_vertical"
                            android:text="@string/frequently_asked_questions"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
